Updated RegUserPostsPage Controller: + fixed error sliding loading view (no posts yet) posts feed section